--- a/franka_panda_description/CMakeLists.txt
+++ b/franka_panda_description/CMakeLists.txt
@@ -4,4 +4,4 @@ find_package(ament_cmake REQUIRED)
 
 ament_package()
 
-install(DIRECTORY meshes urdf DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY launch meshes rviz urdf DESTINATION share/${PROJECT_NAME})
