--- a/franka_panda_moveit_config/config/joint_limits.yaml
+++ b/franka_panda_moveit_config/config/joint_limits.yaml
@@ -43,13 +43,33 @@ joint_limits:
     max_velocity: 2.6100
     has_acceleration_limits: true
     max_acceleration: 5.0
-  panda_finger_joint1:
-    has_velocity_limits: true
-    max_velocity: 0.1
+  pandarobotiq_85_left_finger_tip_joint:
+    has_velocity_limits: false
+    max_velocity: 0
     has_acceleration_limits: false
-    max_acceleration: 0.0
-  panda_finger_joint2:
-    has_velocity_limits: true
-    max_velocity: 0.1
+    max_acceleration: 0
+  pandarobotiq_85_left_inner_knuckle_joint:
+    has_velocity_limits: false
+    max_velocity: 0
     has_acceleration_limits: false
-    max_acceleration: 0.0
+    max_acceleration: 0
+  pandarobotiq_85_left_knuckle_joint:
+    has_velocity_limits: true
+    max_velocity: 0.5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  pandarobotiq_85_right_finger_tip_joint:
+    has_velocity_limits: false
+    max_velocity: 0
+    has_acceleration_limits: false
+    max_acceleration: 0
+  pandarobotiq_85_right_inner_knuckle_joint:
+    has_velocity_limits: false
+    max_velocity: 0
+    has_acceleration_limits: false
+    max_acceleration: 0
+  pandarobotiq_85_right_knuckle_joint:
+    has_velocity_limits: true
+    max_velocity: 0.5
+    has_acceleration_limits: false
+    max_acceleration: 0
