--- a/franka_panda_moveit_config/config/joint_limits.yaml
+++ b/franka_panda_moveit_config/config/joint_limits.yaml
@@ -7,6 +7,13 @@
 # to max accel in 1 ms) the acceleration limits are the ones that satisfy
 # max_jerk = (max_acceleration - min_acceleration) / 0.001
 
+
+# For beginners, we downscale velocity and acceleration limits.
+# You can always specify higher scaling factors (<= 1.0) in your motion requests.  
+# Increase the values below to 1.0 to always move at maximum speed.
+default_velocity_scaling_factor: 0.1
+default_acceleration_scaling_factor: 0.1
+
 joint_limits:
   panda_joint1:
     has_velocity_limits: true
